Color and Styling work

--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -24,7 +24,7 @@ tools:context="net.temporus.depikture.DrawActivity">
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Word"
+        android:text="@string/default_word"
         android:textAppearance="@android:style/TextAppearance.Material.Headline"
         android:textColor="@android:color/black"
         android:textSize="24sp"
