--- a/app/src/main/res/layout/confirm_dialog.xml
+++ b/app/src/main/res/layout/confirm_dialog.xml
@@ -33,7 +33,7 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginTop="25dp"
         android:background="@color/colorAccentDark"
         android:text="@string/no"
@@ -52,7 +52,6 @@
         android:text="@string/default_confirm_question"
         android:textAlignment="center"
         android:textAllCaps="false"
-        android:textColor="@color/textColorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.502"
