--- a/app/src/main/res/layout/content_lobby.xml
+++ b/app/src/main/res/layout/content_lobby.xml
@@ -60,7 +60,6 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/message_default"
-        android:textColor="@color/textColorPrimary"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,8 +77,7 @@
         android:fontFamily="@font/righteous"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="Title"
-        android:textColor="@color/textColorPrimary"
+        android:text="@string/default_lobby_title"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="1.0"
