--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="250dp"
         android:background="@color/colorAccentDark"
-        android:text="@string/join"
+        android:text="@string/join_game_btn"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
