--- a/app/src/main/res/layout/stroke_width_dialog.xml
+++ b/app/src/main/res/layout/stroke_width_dialog.xml
@@ -15,8 +15,6 @@
         android:layout_marginTop="8dp"
         android:text="@string/set_brush_width"
         android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/textColorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -31,17 +29,17 @@
         android:layout_height="24dp"
         android:layout_alignParentStart="true"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/ic_exit_to_app_grey600_36dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/exit_button_content_description" />
 
     <SeekBar
         android:id="@+id/width_seek_bar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintRight_toLeftOf="@+id/closeDialog" />
@@ -75,7 +73,6 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:text="@string/width"
-        android:textColor="@color/textColorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/width_seek_bar"
         app:layout_constraintLeft_toLeftOf="parent"
