--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAlertBox">#424242</color>
     <color name="colorAccent">#00c853</color>
     <color name="colorAccentDark">#388e3c</color>
+    <color name="colorWhite">#ffffff</color>
     <color name="textColorPrimary">#ffffff</color>
     <color name="textColorSecondary">#b6b6b6</color>
     <color name="black_overlay">#66000000</color>
